# cameo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cameo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/include/opencv2/dnn/: dnn.hpp
app/src/main/java/com/example/cameo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: fps_badge.xml
app/src/test/java/com/example/cameo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
